[gd_scene load_steps=17 format=2]

[ext_resource path="res://game/gui/hud.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/player_camera.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/gui/action_hint.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/theme/theme_lerimama.tres" type="Theme" id=4]
[ext_resource path="res://game/gui/tutorial_gui.gd" type="Script" id=5]
[ext_resource path="res://game/gui/game_over.tscn" type="PackedScene" id=6]
[ext_resource path="res://game/touch_controls.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/theme/color_theme_spectrum.png" type="Texture" id=8]
[ext_resource path="res://assets/atlas_controls.png" type="Texture" id=9]
[ext_resource path="res://assets/theme/font_body.tres" type="DynamicFont" id=10]
[ext_resource path="res://game/arena.tscn" type="PackedScene" id=13]
[ext_resource path="res://game/gui/pause_gui.tscn" type="PackedScene" id=20]
[ext_resource path="res://managers/game_manager_defender.gd" type="Script" id=21]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 9 )
region = Rect2( 109, 218, 22, 25 )
margin = Rect2( 0, 3, 0, 0 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 9 )
region = Rect2( 136, 48, 24, 24 )
margin = Rect2( 0, 3, 0, 3 )

[node name="DefenderGame" type="Node2D"]
__meta__ = {
"_edit_horizontal_guides_": [ 1371.0, 1371.0, 576.0, 360.0, 96.0, 408.0 ],
"_edit_vertical_guides_": [ 640.0 ]
}

[node name="GameManager" type="Node" parent="."]
script = ExtResource( 21 )

[node name="GameView" type="VBoxContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
custom_constants/separation = 0

[node name="ViewHeder" type="ColorRect" parent="GameView"]
unique_name_in_owner = true
margin_right = 1280.0
rect_min_size = Vector2( 1280, 0 )

[node name="Viewports" type="HBoxContainer" parent="GameView"]
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="ViewportContainer1" type="ViewportContainer" parent="GameView/Viewports"]
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport1" type="Viewport" parent="GameView/Viewports/ViewportContainer1"]
unique_name_in_owner = true
size = Vector2( 1280, 720 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Arena" parent="GameView/Viewports/ViewportContainer1/Viewport1" instance=ExtResource( 13 )]
__meta__ = {
"_edit_horizontal_guides_": [ 44.0, 32.0, 20.0, 64.0, 660.0, 688.0, 676.0, 648.0 ]
}

[node name="PlayerCamera" parent="GameView/Viewports/ViewportContainer1/Viewport1" instance=ExtResource( 2 )]

[node name="ViewFuter" type="ColorRect" parent="GameView"]
unique_name_in_owner = true
margin_top = 720.0
margin_right = 1280.0
margin_bottom = 720.0
grow_horizontal = 0
rect_min_size = Vector2( 1280, 0 )

[node name="GUI" type="Control" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
theme = ExtResource( 4 )
__meta__ = {
"_editor_description_": ""
}

[node name="Hud" parent="GUI" instance=ExtResource( 1 )]

[node name="TutorialGui" type="Control" parent="GUI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1280, 720 )
script = ExtResource( 5 )
__meta__ = {
"_editor_description_": ""
}

[node name="Checkpoints" type="Control" parent="GUI/TutorialGui"]
margin_left = 392.0
margin_top = 104.0
margin_right = 888.0
margin_bottom = 104.0
grow_horizontal = 2

[node name="TravelingContent" type="Control" parent="GUI/TutorialGui/Checkpoints"]
anchor_right = 1.0
margin_left = -40.0
margin_right = 40.0
margin_bottom = 96.0

[node name="Background" type="ColorRect" parent="GUI/TutorialGui/Checkpoints/TravelingContent"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0784314, 0.0784314, 0.0784314, 0.784314 )

[node name="Title" type="Label" parent="GUI/TutorialGui/Checkpoints/TravelingContent"]
anchor_right = 1.0
margin_top = 14.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 30 )
theme_type_variation = "Lerimama_lite"
custom_colors/font_color = Color( 1, 1, 1, 0.470588 )
custom_styles/normal = SubResource( 1 )
text = "Traveling"
align = 1
uppercase = true
__meta__ = {
"_editor_description_": ""
}

[node name="Line4" type="Label" parent="GUI/TutorialGui/Checkpoints/TravelingContent"]
anchor_right = 1.0
margin_left = 8.0
margin_top = 48.0
margin_right = -8.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 10 )
text = "Use ARROW or WASD keys or DIRECTIONAL PAD on joypad to move."
align = 1
autowrap = true

[node name="BurstingContent" type="Control" parent="GUI/TutorialGui/Checkpoints"]
visible = false
anchor_right = 1.0
margin_bottom = 192.0

[node name="Background" type="ColorRect" parent="GUI/TutorialGui/Checkpoints/BurstingContent"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 1.0
color = Color( 0.0784314, 0.0784314, 0.0784314, 0.784314 )

[node name="Title" type="Label" parent="GUI/TutorialGui/Checkpoints/BurstingContent"]
anchor_right = 1.0
margin_top = 22.0
margin_bottom = 52.0
rect_min_size = Vector2( 0, 30 )
theme_type_variation = "Lerimama_lite"
custom_colors/font_color = Color( 1, 1, 1, 0.470588 )
custom_styles/normal = SubResource( 1 )
text = "Collecting colors"
align = 1
uppercase = true
__meta__ = {
"_editor_description_": ""
}

[node name="Line" type="Label" parent="GUI/TutorialGui/Checkpoints/BurstingContent"]
anchor_right = 1.0
margin_left = 16.0
margin_top = 56.0
margin_right = -16.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 10 )
text = "Burst into stray pixel to destroy it and take its color."
align = 1
autowrap = true

[node name="Line2" type="Label" parent="GUI/TutorialGui/Checkpoints/BurstingContent"]
anchor_right = 1.0
margin_left = 40.0
margin_top = 88.0
margin_right = -40.0
margin_bottom = 136.0
custom_fonts/font = ExtResource( 10 )
text = "Press and hold the BURST KEY and use a DIRECTION KEY to add burst power. Release ..."
align = 1
autowrap = true

[node name="Line3" type="Label" parent="GUI/TutorialGui/Checkpoints/BurstingContent"]
anchor_right = 1.0
margin_left = 24.0
margin_top = 144.0
margin_right = -24.0
margin_bottom = 162.0
custom_fonts/font = ExtResource( 10 )
text = "To stop when bursting, press the BURST KEY again."
align = 1
autowrap = true

[node name="SkillingContent" type="Control" parent="GUI/TutorialGui/Checkpoints"]
visible = false
anchor_right = 1.0
margin_bottom = 160.0

[node name="Background" type="ColorRect" parent="GUI/TutorialGui/Checkpoints/SkillingContent"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 1.0
color = Color( 0.0784314, 0.0784314, 0.0784314, 0.784314 )

[node name="Title" type="Label" parent="GUI/TutorialGui/Checkpoints/SkillingContent"]
anchor_right = 1.0
margin_top = 22.0
margin_bottom = 52.0
rect_min_size = Vector2( 0, 30 )
theme_type_variation = "Lerimama_lite"
custom_colors/font_color = Color( 1, 1, 1, 0.470588 )
custom_styles/normal = SubResource( 1 )
text = "Skills"
align = 1
uppercase = true
__meta__ = {
"_editor_description_": ""
}

[node name="Line" type="Label" parent="GUI/TutorialGui/Checkpoints/SkillingContent"]
anchor_right = 1.0
margin_left = 16.0
margin_top = 56.0
margin_right = -16.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 10 )
text = "When touching a Stray, move towards it to connect.
Push or pull to move it around."
align = 1
autowrap = true

[node name="Line2" type="Label" parent="GUI/TutorialGui/Checkpoints/SkillingContent"]
anchor_right = 1.0
margin_left = 8.0
margin_top = 112.0
margin_right = -16.0
margin_bottom = 136.0
custom_fonts/font = ExtResource( 10 )
text = "White can't be moved, but you can teleport over it."
align = 1
autowrap = true

[node name="FinContent" type="Control" parent="GUI/TutorialGui/Checkpoints"]
visible = false
anchor_right = 1.0
margin_bottom = 160.0

[node name="Background" type="ColorRect" parent="GUI/TutorialGui/Checkpoints/FinContent"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 1.0
color = Color( 0.0784314, 0.0784314, 0.0784314, 0.784314 )

[node name="Title" type="Label" parent="GUI/TutorialGui/Checkpoints/FinContent"]
anchor_right = 1.0
margin_top = 22.0
margin_bottom = 52.0
rect_min_size = Vector2( 0, 30 )
theme_type_variation = "Lerimama_lite"
custom_colors/font_color = Color( 1, 1, 1, 0.470588 )
custom_styles/normal = SubResource( 1 )
text = "Last tutorial step"
align = 1
uppercase = true
__meta__ = {
"_editor_description_": ""
}

[node name="Line" type="Label" parent="GUI/TutorialGui/Checkpoints/FinContent"]
anchor_right = 1.0
margin_left = 48.0
margin_top = 56.0
margin_right = -48.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 10 )
text = "You've learned some basic moves. Get more tips and tricks in the games \"About\" screen."
align = 1
autowrap = true

[node name="Line2" type="Label" parent="GUI/TutorialGui/Checkpoints/FinContent"]
anchor_right = 1.0
margin_left = 16.0
margin_top = 112.0
margin_right = -24.0
margin_bottom = 130.0
custom_fonts/font = ExtResource( 10 )
text = "Now, unleash spectacular bursts and enjoy the game!"
align = 1
autowrap = true

[node name="HudGuide" type="Control" parent="GUI/TutorialGui"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Shadow" type="Control" parent="GUI/TutorialGui/HudGuide"]
modulate = Color( 0, 0, 0, 0.313726 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = 1.0
margin_bottom = 1.0
mouse_filter = 2

[node name="PlayerLabel" type="Label" parent="GUI/TutorialGui/HudGuide/Shadow"]
self_modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
margin_left = 32.0
margin_top = 45.0
margin_right = 220.0
margin_bottom = 63.0
custom_fonts/font = ExtResource( 10 )
text = "Life, energy and Score"
uppercase = true
__meta__ = {
"_edit_group_": true
}

[node name="Line2D" type="Line2D" parent="GUI/TutorialGui/HudGuide/Shadow/PlayerLabel"]
modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
position = Vector2( -14, 6 )
points = PoolVector2Array( 38, -19, 38, -7 )
width = 0.5
default_color = Color( 1, 1, 1, 1 )
antialiased = true

[node name="TimeLabel" type="Label" parent="GUI/TutorialGui/HudGuide/Shadow"]
self_modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
margin_left = 556.0
margin_top = 45.0
margin_right = 637.0
margin_bottom = 63.0
custom_fonts/font = ExtResource( 10 )
text = "Game time"
uppercase = true
__meta__ = {
"_edit_group_": true
}

[node name="Line2D3" type="Line2D" parent="GUI/TutorialGui/HudGuide/Shadow/TimeLabel"]
modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
position = Vector2( -39, 6 )
points = PoolVector2Array( 91, -19, 91, -7 )
width = 0.5
default_color = Color( 1, 1, 1, 1 )
antialiased = true

[node name="MusicLabel" type="Label" parent="GUI/TutorialGui/HudGuide/Shadow"]
self_modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
margin_left = 667.0
margin_top = 45.0
margin_right = 937.0
margin_bottom = 63.0
custom_fonts/font = ExtResource( 10 )
text = "Clickable music player"
uppercase = true
__meta__ = {
"_edit_group_": true
}

[node name="Line2D2" type="Line2D" parent="GUI/TutorialGui/HudGuide/Shadow/MusicLabel"]
modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
position = Vector2( -34, 9 )
points = PoolVector2Array( 79, -22, 79, -10 )
width = 0.5
default_color = Color( 1, 1, 1, 1 )
antialiased = true

[node name="HighscoreLabel" type="Label" parent="GUI/TutorialGui/HudGuide/Shadow"]
self_modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
margin_left = 1055.0
margin_top = 45.0
margin_right = 1250.0
margin_bottom = 63.0
grow_horizontal = 0
custom_fonts/font = ExtResource( 10 )
text = "Games highscore"
align = 2
uppercase = true
__meta__ = {
"_edit_group_": true
}

[node name="Line2D" type="Line2D" parent="GUI/TutorialGui/HudGuide/Shadow/HighscoreLabel"]
modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
position = Vector2( 46, 1 )
points = PoolVector2Array( 107, -14, 107, -2 )
width = 0.5
default_color = Color( 1, 1, 1, 1 )
antialiased = true

[node name="GameLabel" type="Label" parent="GUI/TutorialGui/HudGuide/Shadow"]
self_modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
margin_left = 31.0
margin_top = 654.0
margin_right = 157.0
margin_bottom = 672.0
custom_fonts/font = ExtResource( 10 )
text = "Game and level"
uppercase = true
__meta__ = {
"_edit_group_": true
}

[node name="Line2D2" type="Line2D" parent="GUI/TutorialGui/HudGuide/Shadow/GameLabel"]
modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
position = Vector2( 0, 56 )
points = PoolVector2Array( 57, -22, 57, -34 )
width = 0.5
default_color = Color( 1, 1, 1, 1 )
antialiased = true

[node name="SpectrumLabel" type="Label" parent="GUI/TutorialGui/HudGuide/Shadow"]
self_modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
margin_left = 427.5
margin_top = 654.0
margin_right = 852.5
margin_bottom = 672.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 10 )
text = "Indicator of picked and available colors"
align = 1
uppercase = true
__meta__ = {
"_edit_group_": true
}

[node name="Line2D" type="Line2D" parent="GUI/TutorialGui/HudGuide/Shadow/SpectrumLabel"]
modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
position = Vector2( 136, 59 )
points = PoolVector2Array( 76.5, -37, 76.5, -25 )
width = 0.5
default_color = Color( 1, 1, 1, 1 )
antialiased = true

[node name="AstrayLabel" type="Label" parent="GUI/TutorialGui/HudGuide/Shadow"]
self_modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
margin_left = 1012.0
margin_top = 654.0
margin_right = 1249.0
margin_bottom = 672.0
grow_horizontal = 0
custom_fonts/font = ExtResource( 10 )
text = "Pixels still astray"
align = 2
uppercase = true
__meta__ = {
"_edit_group_": true
}

[node name="Line2D2" type="Line2D" parent="GUI/TutorialGui/HudGuide/Shadow/AstrayLabel"]
modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
position = Vector2( 109, 58 )
points = PoolVector2Array( 104, -24, 104, -36 )
width = 0.5
default_color = Color( 1, 1, 1, 1 )
antialiased = true

[node name="PlayerLabel" type="Label" parent="GUI/TutorialGui/HudGuide"]
self_modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
margin_left = 32.0
margin_top = 45.0
margin_right = 220.0
margin_bottom = 63.0
custom_fonts/font = ExtResource( 10 )
text = "Life, energy and Score"
uppercase = true
__meta__ = {
"_edit_group_": true
}

[node name="Line2D" type="Line2D" parent="GUI/TutorialGui/HudGuide/PlayerLabel"]
modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
position = Vector2( -14, 6 )
points = PoolVector2Array( 38, -19, 38, -7 )
width = 0.5
default_color = Color( 1, 1, 1, 1 )
antialiased = true

[node name="TimeLabel" type="Label" parent="GUI/TutorialGui/HudGuide"]
self_modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
margin_left = 556.0
margin_top = 45.0
margin_right = 637.0
margin_bottom = 63.0
custom_fonts/font = ExtResource( 10 )
text = "Game time"
uppercase = true
__meta__ = {
"_edit_group_": true
}

[node name="Line2D3" type="Line2D" parent="GUI/TutorialGui/HudGuide/TimeLabel"]
modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
position = Vector2( -39, 6 )
points = PoolVector2Array( 91, -19, 91, -7 )
width = 0.5
default_color = Color( 1, 1, 1, 1 )
antialiased = true

[node name="MusicLabel" type="Label" parent="GUI/TutorialGui/HudGuide"]
self_modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
margin_left = 667.0
margin_top = 45.0
margin_right = 937.0
margin_bottom = 63.0
custom_fonts/font = ExtResource( 10 )
text = "Clickable music player"
uppercase = true
__meta__ = {
"_edit_group_": true
}

[node name="Line2D2" type="Line2D" parent="GUI/TutorialGui/HudGuide/MusicLabel"]
modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
position = Vector2( -34, 9 )
points = PoolVector2Array( 79, -22, 79, -10 )
width = 0.5
default_color = Color( 1, 1, 1, 1 )
antialiased = true

[node name="HighscoreLabel" type="Label" parent="GUI/TutorialGui/HudGuide"]
self_modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
margin_left = 1055.0
margin_top = 45.0
margin_right = 1250.0
margin_bottom = 63.0
grow_horizontal = 0
custom_fonts/font = ExtResource( 10 )
text = "Games highscore"
align = 2
uppercase = true
__meta__ = {
"_edit_group_": true
}

[node name="Line2D" type="Line2D" parent="GUI/TutorialGui/HudGuide/HighscoreLabel"]
modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
position = Vector2( 46, 1 )
points = PoolVector2Array( 107, -14, 107, -2 )
width = 0.5
default_color = Color( 1, 1, 1, 1 )
antialiased = true

[node name="GameLabel" type="Label" parent="GUI/TutorialGui/HudGuide"]
self_modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
margin_left = 31.0
margin_top = 654.0
margin_right = 157.0
margin_bottom = 672.0
custom_fonts/font = ExtResource( 10 )
text = "Game and level"
uppercase = true
__meta__ = {
"_edit_group_": true
}

[node name="Line2D2" type="Line2D" parent="GUI/TutorialGui/HudGuide/GameLabel"]
modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
position = Vector2( 0, 56 )
points = PoolVector2Array( 57, -22, 57, -34 )
width = 0.5
default_color = Color( 1, 1, 1, 1 )
antialiased = true

[node name="SpectrumLabel" type="Label" parent="GUI/TutorialGui/HudGuide"]
self_modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
margin_left = 427.5
margin_top = 654.0
margin_right = 852.5
margin_bottom = 672.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 10 )
text = "Indicator of picked and available colors"
align = 1
uppercase = true
__meta__ = {
"_edit_group_": true
}

[node name="Line2D" type="Line2D" parent="GUI/TutorialGui/HudGuide/SpectrumLabel"]
modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
position = Vector2( 136, 59 )
points = PoolVector2Array( 76.5, -37, 76.5, -25 )
width = 0.5
default_color = Color( 1, 1, 1, 1 )
antialiased = true

[node name="AstrayLabel" type="Label" parent="GUI/TutorialGui/HudGuide"]
self_modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
margin_left = 1012.0
margin_top = 654.0
margin_right = 1249.0
margin_bottom = 672.0
grow_horizontal = 0
custom_fonts/font = ExtResource( 10 )
text = "Pixels still astray"
align = 2
uppercase = true
__meta__ = {
"_edit_group_": true
}

[node name="Line2D2" type="Line2D" parent="GUI/TutorialGui/HudGuide/AstrayLabel"]
modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
position = Vector2( 109, 58 )
points = PoolVector2Array( 104, -24, 104, -36 )
width = 0.5
default_color = Color( 1, 1, 1, 1 )
antialiased = true

[node name="Spectrum" type="TextureRect" parent="GUI/TutorialGui/HudGuide"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -440.0
margin_top = -25.0
margin_right = 430.0
margin_bottom = -13.0
rect_min_size = Vector2( 0, 12 )
texture = ExtResource( 8 )
expand = true

[node name="ActionHint" parent="GUI/TutorialGui" instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -126.0
margin_top = 436.0
margin_right = 129.0
margin_bottom = 463.0
__meta__ = {
"_edit_vertical_guides_": [ -160.0 ]
}

[node name="Label" parent="GUI/TutorialGui/ActionHint" index="0"]
margin_top = 4.0
margin_bottom = 22.0

[node name="KEY" parent="GUI/TutorialGui/ActionHint" index="1"]
margin_top = 2.0
margin_right = 66.0
margin_bottom = 24.0
text = "N"

[node name="Label2" parent="GUI/TutorialGui/ActionHint" index="2"]
margin_left = 74.0
margin_top = 4.0
margin_right = 91.0
margin_bottom = 22.0

[node name="Jp" parent="GUI/TutorialGui/ActionHint" index="3"]
margin_left = 99.0
margin_right = 121.0
margin_bottom = 27.0
texture = SubResource( 2 )

[node name="Label3" parent="GUI/TutorialGui/ActionHint" index="4"]
margin_left = 129.0
margin_top = 4.0
margin_right = 226.0
margin_bottom = 22.0
text = "to skip step"

[node name="TouchControls" parent="GUI" instance=ExtResource( 7 )]
visible = false

[node name="PauseMenu" parent="GUI" instance=ExtResource( 20 )]
__meta__ = {
"_edit_horizontal_guides_": [ 112.0 ],
"_edit_vertical_guides_": [ 640.0, 304.0, 976.0 ]
}

[node name="GameOver" parent="GUI" instance=ExtResource( 6 )]
__meta__ = {
"_edit_horizontal_guides_": [ 192.0, 256.0, 616.0 ],
"_edit_vertical_guides_": [ 640.0 ]
}

[node name="Timer2" type="Timer" parent="GUI/GameOver/NameInputPopup/NameInput" index="0"]
wait_time = 0.65

[node name="PopupMenu2" type="PopupMenu" parent="GUI/GameOver/NameInputPopup/NameInput" index="1"]
items = [ "Cut", null, 0, false, false, 0, 268435544, null, "", false, "Copy", null, 0, false, false, 1, 268435523, null, "", false, "Paste", null, 0, false, false, 2, 268435542, null, "", false, "", null, 0, false, false, -1, 0, null, "", true, "Select All", null, 0, false, false, 4, 268435521, null, "", false, "Clear", null, 0, false, false, 3, 0, null, "", false, "", null, 0, false, false, -1, 0, null, "", true, "Undo", null, 0, false, false, 5, 268435546, null, "", false, "Redo", null, 0, false, false, 6, 301989978, null, "", false ]

[node name="Timer3" type="Timer" parent="GUI/GameOver/NameInputPopup/NameInput" index="2"]
wait_time = 0.65

[node name="PopupMenu3" type="PopupMenu" parent="GUI/GameOver/NameInputPopup/NameInput" index="3"]
items = [ "Cut", null, 0, false, false, 0, 268435544, null, "", false, "Copy", null, 0, false, false, 1, 268435523, null, "", false, "Paste", null, 0, false, false, 2, 268435542, null, "", false, "", null, 0, false, false, -1, 0, null, "", true, "Select All", null, 0, false, false, 4, 268435521, null, "", false, "Clear", null, 0, false, false, 3, 0, null, "", false, "", null, 0, false, false, -1, 0, null, "", true, "Undo", null, 0, false, false, 5, 268435546, null, "", false, "Redo", null, 0, false, false, 6, 301989978, null, "", false ]

[node name="SweeperHintBtn" type="Button" parent="GUI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -120.0
margin_top = -102.0
margin_right = 120.0
margin_bottom = -80.0

[node name="ActionHint" parent="GUI/SweeperHintBtn" instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -127.5
margin_top = 2.0
margin_right = 127.5
margin_bottom = 29.0
__meta__ = {
"_edit_vertical_guides_": [ -160.0 ]
}

[node name="Label" parent="GUI/SweeperHintBtn/ActionHint" index="0"]
margin_top = 4.0
margin_bottom = 22.0

[node name="KEY" parent="GUI/SweeperHintBtn/ActionHint" index="1"]
margin_top = 2.0
margin_right = 66.0
margin_bottom = 24.0
text = "H"

[node name="Label2" parent="GUI/SweeperHintBtn/ActionHint" index="2"]
margin_left = 74.0
margin_top = 4.0
margin_right = 91.0
margin_bottom = 22.0

[node name="Jp" parent="GUI/SweeperHintBtn/ActionHint" index="3"]
margin_left = 99.0
margin_right = 123.0
margin_bottom = 27.0
texture = SubResource( 3 )

[node name="Label3" parent="GUI/SweeperHintBtn/ActionHint" index="4"]
margin_left = 131.0
margin_top = 4.0
margin_right = 244.0
margin_bottom = 22.0
text = "to toggle HINT"

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="EngineStalledTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LineStepPauseTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="EngineStalledTimer" to="GameManager" method="_on_EngineStalledTimer_timeout"]
[connection signal="timeout" from="LineStepPauseTimer" to="GameManager" method="_on_LineStepPauseTimer_timeout"]

[editable path="GUI/TutorialGui/ActionHint"]
[editable path="GUI/GameOver"]
[editable path="GUI/SweeperHintBtn/ActionHint"]
